--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     
     <!-- Campo para enviar mensajes a la app -->
     <div>
-        <input id="inputMessage" type="text" placeholder="Escribe un mensaje para la app" />
+        <input id="inputMessage" type="text" placeholder="Escribe un mensaje para la app 2.0" />
         <button id="sendToApp">Enviar a la app</button>
     </div>
 
     <!-- Mostrar los mensajes enviados -->
-    <div>
+    <div>ß
         <h2>Mensajes Enviados a la App</h2>
         <div id="sentMessagesContainer"></div>
     </div>
