--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <!-- Mostrar los mensajes enviados -->
-    <div>ß
+    <div>
         <h2>Mensajes Enviados a la App</h2>
         <div id="sentMessagesContainer"></div>
     </div>
